infrastructure/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s101
  namespace: tom01-web-test-app
spec:
  selector:
    matchLabels:
      app: k8s101
  replicas: 1
  template:
    metadata:
      labels:
        app: k8s101
    spec:
      containers:
        - name: app
          image: tcentric/k8s101:0.1
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "32Mi"
              cpu: "50m"
